# sensor-studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.cmd  build.sh  pubspec.yaml
SensorStudioCoreService/: copy_jniLibs.sh  run.sh  settings.gradle.kts
SensorStudioCoreService/app/: build.gradle.kts
SensorStudioCoreService/gradle/wrapper/: gradle-wrapper.properties
android/app/: build.gradle.kts
core/: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  build.cmd  build.sh
core/.cargo/: config.toml
core/config/: runtime.toml.example
core/src/: android.rs  lib.rs  main.rs
core/src/config/: loader.rs  mod.rs  runtime.rs
core/src/engine/: mod.rs
core/src/engine/mock/: engine.rs  mod.rs
core/src/instance/: mod.rs
core/src/runtime/: adapter.rs  extensions.rs  factory.rs  ffi.rs  loader.rs  mod.rs
core/src/stream/: channel.rs  mod.rs  publisher.rs
core/src/stream/console/: mod.rs  publisher.rs
core/src/stream/websocket/: message.rs  mod.rs  protocol.rs  publisher.rs  server.rs
core/src/stream/websocket/foxglove/: encoder.rs  mod.rs  protocol.rs
core/src/transport/: mod.rs  udp.rs  usb.rs
core/src/types/: mod.rs  pointcloud.rs
docs/: SDD.md  SDS.md  SRS.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  diff.txt  main.dart
lib/core/theme/: app_theme.dart
lib/features/sensor/: sensor_providers.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
test/: widget_test.dart
ui/: CHANGELOG.md  README.md  build_linux_x86_64.sh  build_windows_x86_64.cmd  pubspec.yaml
ui/lib/: main.dart
ui/test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+61 files in other folders)
