[package]
name = "sensor-studio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.11.1"
network-interface = "2.0.5"
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "macros"] }
