[package]
name = "sensor-studio-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.11.1"
derive = "1.0.0"
features = "0.10.0"
futures-util = "0.3.32"
libloading = "0.9.0"
network-interface = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "macros"] }
toml = "1.0.7"
