[package]
name = "sensor-studio-core"
version = "0.4.0"
edition = "2024"

[lib]
name = "sensor_studio_core"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "sensor-studio-core"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.11.1"
futures-util = "0.3.32"
libloading = "0.9.0"
network-interface = "2.0.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
socket2 = "0.6.3"
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "macros", "signal"] }
toml = "1.0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time", "chrono"] }
tracing-appender = "0.2.3"
rusb = "0.9.4"
tokio-util = "0.7"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"
jni = "0.22.4"
log = "0.4.33"
